--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -30,3 +30,14 @@ body {
   background-color: #145B50;
 }
 
+.custom-disabled-textfield.Mui-disabled .MuiInputBase-input {
+  color: #228c22 !important;
+}
+
+.custom-disabled-textfield.Mui-disabled .MuiFormHelperText-root {
+  color: #228c22 !important;
+}
+
+.custom-disabled-textfield.Mui-disabled .MuiOutlinedInput-notchedOutline {
+  border-color: #228c22 !important;
+}
